# OpenGL_Repo

./: CMakeLists.txt  double_triangles.cpp  glad.c  main.cpp  simple_texture.cpp  tess.cpp  three_color_triangle.cpp
include/: Shader.h  stb_image.h  windowManager.h
include/glad/: glad.h
shaders/: tess_control_shader.tcs.glsl  tess_eval_shader.tes.glsl  tess_fs.fs.glsl  tess_vs.vs.glsl  three_color_triangle_vertex
src/: Shader.cpp  glad.c  windowManager.cpp
